--- a/index.html
+++ b/index.html
@@ -221,9 +221,18 @@
             <!-- 슬라이드1 -->
             <li class="swiper-slide">
               <picture>
-                <img src="images/jihye/b_visual slide/l_b_visual slide_2.png" alt="가족피크닉 1920px" class="visual-de" />
-                <img src="images/jihye/b_visual slide/m_b_visual slide_2.png" alt="가족피크닉 768px " class="visual-ta"/>
-                <img src="images/jihye/b_visual slide/s_b_visual slide_2.png" alt="가족피크닉 390px" class="visual-mb"/>
+                <img
+                  src="images/jihye/b_visual slide/l_b_visual slide_2.png"
+                  alt="가족피크닉 1920px"
+                  class="visual-de" />
+                <img
+                  src="images/jihye/b_visual slide/m_b_visual slide_2.png"
+                  alt="가족피크닉 768px "
+                  class="visual-ta" />
+                <img
+                  src="images/jihye/b_visual slide/s_b_visual slide_2.png"
+                  alt="가족피크닉 390px"
+                  class="visual-mb" />
               </picture>
               <div class="visual-inner">
                 <div class="box-txt">
@@ -232,7 +241,7 @@
                   <p>행복한 시간 보내세요.</p>
                   <a href="#" class="b_visual-btn">살펴보기</a>
                   <div class="box-txt-wrap">
-                    <img src="images/jihye/b_visual slide/btn_1.png" alt="버튼1" width="80">
+                    <img src="images/jihye/b_visual slide/btn_1.png" alt="버튼1" width="80" />
                   </div>
                 </div>
               </div>
@@ -241,8 +250,8 @@
             <li class="swiper-slide">
               <picture>
                 <img src="images/jihye/b_visual slide/l_b_visual slide_1.png" alt="유기농 1920px" class="visual-de" />
-                <img src="images/jihye/b_visual slide/m_b_visual slide_1.png" alt="유기농 768px " class="visual-ta"/>
-                <img src="images/jihye/b_visual slide/s_b_visual slide_1.png" alt="유기농 390px" class="visual-mb"/>
+                <img src="images/jihye/b_visual slide/m_b_visual slide_1.png" alt="유기농 768px " class="visual-ta" />
+                <img src="images/jihye/b_visual slide/s_b_visual slide_1.png" alt="유기농 390px" class="visual-mb" />
               </picture>
               <div class="wrap-inner">
                 <div class="box-txt">
@@ -251,7 +260,7 @@
                   <p>건강한 아름다움을 경험하세요.</p>
                   <a href="#" class="b_visual-btn">살펴보기</a>
                   <div class="box-txt-wrap">
-                    <img src="images/jihye/b_visual slide/btn_2.png" alt="버튼2" width="80">
+                    <img src="images/jihye/b_visual slide/btn_2.png" alt="버튼2" width="80" />
                   </div>
                 </div>
               </div>
@@ -260,8 +269,8 @@
             <li class="swiper-slide">
               <picture>
                 <img src="images/jihye/b_visual slide/l_b_visual slide_3.png" alt="사랑 1920px" class="visual-de" />
-                <img src="images/jihye/b_visual slide/m_b_visual slide_3.png" alt="사랑 768px " class="visual-ta"/>
-                <img src="images/jihye/b_visual slide/s_b_visual slide_3.png" alt="사랑 390px" class="visual-mb"/>
+                <img src="images/jihye/b_visual slide/m_b_visual slide_3.png" alt="사랑 768px " class="visual-ta" />
+                <img src="images/jihye/b_visual slide/s_b_visual slide_3.png" alt="사랑 390px" class="visual-mb" />
               </picture>
               <div class="wrap-inner">
                 <div class="box-txt">
@@ -270,7 +279,7 @@
                   <p>사랑하는 사람에게 러쉬를 선물하세요.</p>
                   <a href="#" class="b_visual-btn">살펴보기</a>
                   <div class="box-txt-wrap">
-                    <img src="images/jihye/b_visual slide/btn_3.png" alt="버튼3" width="80">
+                    <img src="images/jihye/b_visual slide/btn_3.png" alt="버튼3" width="80" />
                   </div>
                 </div>
               </div>
@@ -278,9 +287,18 @@
             <!-- 슬라이드4 -->
             <li class="swiper-slide">
               <picture>
-                <img src="images/jihye/b_visual slide/l_b_visual slide_4.png" alt="나이트케어 1920px" class="visual-de" />
-                <img src="images/jihye/b_visual slide/m_b_visual slide_4.png" alt="나이트케어 768px " class="visual-ta"/>
-                <img src="images/jihye/b_visual slide/s_b_visual slide_4.png" alt="나이트케어 390px" class="visual-mb"/>
+                <img
+                  src="images/jihye/b_visual slide/l_b_visual slide_4.png"
+                  alt="나이트케어 1920px"
+                  class="visual-de" />
+                <img
+                  src="images/jihye/b_visual slide/m_b_visual slide_4.png"
+                  alt="나이트케어 768px "
+                  class="visual-ta" />
+                <img
+                  src="images/jihye/b_visual slide/s_b_visual slide_4.png"
+                  alt="나이트케어 390px"
+                  class="visual-mb" />
               </picture>
               <div class="wrap-inner">
                 <div class="box-txt">
@@ -289,7 +307,7 @@
                   <p>편안한 밤을 위한 특별한 스킨케어 루틴.</p>
                   <a href="#" class="b_visual-btn">살펴보기</a>
                   <div class="box-txt-wrap">
-                    <img src="images/jihye/b_visual slide/btn_4.png" alt="버튼4" width="80">
+                    <img src="images/jihye/b_visual slide/btn_4.png" alt="버튼4" width="80" />
                   </div>
                 </div>
               </div>
