modal  a_header  i-footer 반응형 수정완료 b_visual 반응형 수정중

--- a/index.html
+++ b/index.html
@@ -98,13 +98,15 @@
     <!-- End Google Tag Manager (noscript) -->
     <!-- 전체레이아웃 -->
     <div class="wrap">
-      <!-- a_header -->
-      <header class="a_header">
+       <!-- a_header -->
+       <header class="a_header">
         <div class="wrap-inner">
           <div class="header-left">
-            <!-- 햄버거바 메뉴버튼 -->
-            <a href="#" class="mb-xi" id="hamburger-menu" width="50">
-              <img src="images/jihye/a_header/icon/icon-menu.png" alt="햄버거바 아이콘" />
+            <!-- 햄버거 메뉴 버튼 -->
+            <a href="#" class="mb-xi" id="hamburger-menu">
+              <!-- <img src="images/jihye/a_header/icon/icon-menu.png" alt="햄버거바 아이콘" id="menu-icon" /> -->
+              <img src="images/jihye/a_header/icon/icon-menu2.png" alt="햄버거바 아이콘" id="menu-icon" />
+              <img src="images/jihye/a_header/icon/icon-x.png" class="mb-close" alt="닫기 아이콘" id="close-icon" />
             </a>
             <!--로고  -->
             <a href="#" class="logo">
@@ -213,7 +215,110 @@
             </li>
           </ul>
         </div>
+        <!-- 모바일 메뉴 -->
       </header>
+      <!-- 메뉴 -->
+      <nav class="mb-nav" id="mobile-nav">
+        <div class="wrap-inner">
+          <ul class="mb-cartegori">
+            <li>
+              <a href="#">카테고리</a>
+              <ul class="mb-depth">
+                <li>
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_vest.png" alt="베스트" /><span>베스트</span></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="images/jihye/a_header/gnb/gnb_collabo.png" alt="콜라보" /><span>콜라보</span></a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="images/jihye/a_header/gnb/gnb_limited.png" alt="리미티드" /><span>리미티드</span></a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="images/jihye/a_header/gnb/gnb_newproduts.png" alt="신제품" /><span>신제품</span></a
+                  >
+                </li>
+                <li>
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_hair.png" alt="헤어" /><span>헤어</span></a>
+                </li>
+                <li>
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_face.png" alt="페이스" /><span>페이스</span></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="images/jihye/a_header/gnb/gnb_makeup.png" alt="메이크업" /><span>메이크업</span></a
+                  >
+                </li>
+                <li>
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_gift.png" alt="기프트" /><span>기프트</span></a>
+                </li>
+                <li>
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_bath.png" alt="배쓰" /><span>배쓰</span></a>
+                </li>
+                <li>
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_shower.png" alt="샤워" /><span>샤워</span></a>
+                </li>
+                <li>
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_body.png" alt="보디" /><span>보디</span></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="images/jihye/a_header/gnb/gnb_perfume.png" alt="프래그런스" /><span>프래그런스</span></a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="images/jihye/a_header/gnb/gnb_accessory.png" alt="악세서리" /><span>악세서리</span></a
+                  >
+                </li>
+                <li>
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_swag.png" alt="스웨그" /><span>스웨그</span></a>
+                </li>
+                <li>
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_spa.png" alt="스파" /><span>스파</span></a>
+                </li>
+                <li>
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_experience.png" alt="체험" /><span>체험</span></a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="mb-gnb">
+            <li>
+              <a href="#">이벤트</a>
+              <ul class="mb-depth2">
+                <li><a href="#">‣ 러쉬 이벤트</a></li>
+                <li><a href="#">‣ 선정자 발표</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">커뮤니티</a>
+              <ul class="mb-depth2">
+                <li><a href="#">‣ 젤러쉬</a></li>
+                <li><a href="#">‣ 에디터픽</a></li>
+                <li><a href="#">‣ 러쉬 타임즈</a></li>
+                <li><a href="#">‣ 리토의 일기장</a></li>
+                <li><a href="#">‣ 다운로드 러쉬</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">러쉬소식</a>
+              <ul class="mb-depth2">
+                <li><a href="#">‣ 러쉬소개</a></li>
+                <li><a href="#">‣ 러쉬 이야기</a></li>
+                <li><a href="#">‣ 채러티팟</a></li>
+                <li><a href="#">‣ 서명 캠페인</a></li>
+                <li><a href="#">‣ 매장안내</a></li>
+                <li><a href="#">‣ 채용공고</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
       <!-- b_visual slide -->
       <section class="b_visual">
         <div class="swiper visual-sw">
@@ -285,8 +390,8 @@
               <div class="wrap-inner">
                 <div class="box-txt">
                   <h4>깊은 휴식을 위한 나이트 케어</h4>
-                  <p>하루의 피로를 씻어내고,</p>
-                  <p>편안한 밤을 위한 특별한 스킨케어 루틴.</p>
+                  <p>로즈 아르간 보디 컨디셔너</p>
+                  <p>편안한 밤을 위한 특별한 시간.</p>
                   <a href="#" class="b_visual-btn">살펴보기</a>
                   <div class="box-txt-wrap">
                     <img src="images/jihye/b_visual slide/btn_4.png" alt="버튼4" width="80">
